downgraded to nextjs 15

--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "15.0.3",
     "nodemailer": "^7.0.10",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0"
   },
@@ -30,7 +30,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "15.0.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
